--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,22 @@
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
     <activity
+      android:label="@string/title_activity_login"
+      android:name=".controller.LoginActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+
+    <!--
+               Set to true if your app is Standalone, that is, it does not require the handheld
+               app to run.
+        -->
+    <activity
       android:label="@string/app_name"
-      android:name=".MainActivity"
+      android:name=".controller.MainActivity"
       android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
@@ -19,6 +33,21 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
+    <meta-data
+      android:name="com.google.android.wearable.standalone"
+      android:value="true"/>
+    <!--
+               Set to true if your app is Standalone, that is, it does not require the handheld
+               app to run.
+        -->
+    <uses-library
+      android:name="com.google.android.wearable"
+      android:required="true"/>
   </application>
+
+  <uses-feature android:name="android.hardware.type.watch"/>
+
+  <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
 </manifest>
