--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="edu.cnm.deepdive.gallery12">
 
+  <uses-permission android:name="android.permission.INTERNET"/>
+
   <application
-    android:allowBackup="true"
+    android:allowBackup="false"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
+    android:name=".GalleryApplication"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
@@ -19,35 +22,10 @@
       </intent-filter>
     </activity>
 
-    <!--
-               Set to true if your app is Standalone, that is, it does not require the handheld
-               app to run.
-        -->
     <activity
       android:label="@string/app_name"
       android:name=".controller.MainActivity"
       android:theme="@style/AppTheme.NoActionBar">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
     </activity>
-
-    <meta-data
-      android:name="com.google.android.wearable.standalone"
-      android:value="true"/>
-    <!--
-               Set to true if your app is Standalone, that is, it does not require the handheld
-               app to run.
-        -->
-    <uses-library
-      android:name="com.google.android.wearable"
-      android:required="true"/>
   </application>
-
-  <uses-feature android:name="android.hardware.type.watch"/>
-
-  <uses-permission android:name="android.permission.WAKE_LOCK"/>
-
 </manifest>
