--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,13 +12,14 @@ static def quoted(String value) {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
+    //noinspection GroovyAssignabilityCheck
     defaultConfig {
         applicationId "edu.cnm.deepdive.gallery12"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -37,6 +38,7 @@ android {
         )
     }
 
+    //noinspection GroovyAssignabilityCheck
     buildTypes {
         release {
             minifyEnabled false
@@ -59,25 +61,25 @@ android {
 dependencies {
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
 
-    implementation 'androidx.fragment:fragment:1.3.1'
+    implementation 'androidx.fragment:fragment:1.4.1'
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     implementation "androidx.navigation:navigation-fragment:$navigationVersion"
     implementation "androidx.navigation:navigation-ui:$navigationVersion"
 
     // Google Sign In dependency
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
 
     // Gson (Google JSON) dependency
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // ReactiveX libraries
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     // Retrofit (REST client) with ReactiveX & Gson integration
