--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     android:theme="@style/AppTheme">
     <activity
       android:label="@string/title_activity_login"
+      android:exported="true"
       android:name=".controller.LoginActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
